# AbstractNeuronDynamics

./: .gitignore  CMakeLists.txt  index.html
cmake/: Summary.cmake
demos/: CMakeLists.txt
demos/AP_Conceptual/: CMakeLists.txt  CMakeLists.txt.new
doc/: CMakeLists.txt  CommonAIBibliography.bib  CommonBibliography.bib  CommonNeuronalBibliography.bib  CommonPrivateBibliography.bib  Computing_Main.dox  Contents.dox  Copy (1) CMakeLists.txt  Copy (1) Doxyfile.in  Doxyfile.in  General_Main.dox  GettingStarted.dox  Glossary.dox  Information_Main.dox  Modeling_Main.dox  Modeling_Multiple_Main.dox  Modeling_Single_AIS.dox  Modeling_Single_Abstract_AP.dox  Modeling_Single_Artificial.dox  Modeling_Single_Axon.dox  Modeling_Single_Comparing.dox  Modeling_Single_Computing.dox  Modeling_Single_Electric.dox  Modeling_Single_Fallacies.dox  Modeling_Single_Ion_Channel.dox  Modeling_Single_Layers.dox  Modeling_Single_Main.dox  Modeling_Single_Membrane.dox  Modeling_Single_Physical.dox  Overview.dox  Physics_Abstractions.dox  Physics_Basics_Main.dox  Physics_Introductory.dox  Physics_Main.dox  Physics_Measuring_Conductance.dox  Physics_Measuring_Current.dox  Physics_Measuring_Delay.dox  Physics_Measuring_Electrolytes.dox  Physics_Measuring_Filtering.dox  Physics_Measuring_Main.dox  (+6 more)
doc/images/: AP_ConceptualDemo.tex  NeuronStateMachine.tex
docs/: COMPUTING_MAIN_PAGE.html  EventGencomp_8h_source.html  GETTING_STARTED_PAGE.html  GLOSSARY.html  INFORMATION_MAIN_PAGE.html  MEASURING_CONDUCTANCE_PAGE.html  MEASURING_CURRENT_PAGE.html  MEASURING_ELECTROLITES_PAGE.html  MODELING_AXON_PAGE.html  MODELING_COMPUTING_MAIN_PAGE.html  MODELING_ION_CHANNEL_PAGE.html  MODELING_MAIN_PAGE.html  MODELING_MULTIPLE_MAIN_PAGE.html  MODELING_PAGE.html  MODELING_SINGLE_ABSTRACT_ARTIFICIAL_PAGE.html  MODELING_SINGLE_ABSTRACT_COMPUTING_PAGE.html  MODELING_SINGLE_ABSTRACT_MEMBRANE_PAGE.html  MODELING_SINGLE_ACTION_POTENTIAL_PAGE.html  MODELING_SINGLE_AIS_PAGE.html  MODELING_SINGLE_AXON_PAGE.html  MODELING_SINGLE_COMPARING_PAGE.html  MODELING_SINGLE_ELECTRIC_PAGE.html  MODELING_SINGLE_FALLACIES_PAGE.html  MODELING_SINGLE_ION_CHANNEL_PAGE.html  MODELING_SINGLE_LAYERS_PAGE.html  MODELING_SINGLE_MAIN_PAGE.html  MODELING_SINGLE_MEMBRANE_PAGE.html  NeuronDemo_8h.html  NeuronDemo_8h.js  NeuronDemo_8h__incl.md5  NeuronDemo_8h_source.html  NeuronPhysical_8h.html  NeuronPhysical_8h__incl.map  NeuronPhysical_8h__incl.md5  NeuronPhysical_8h_source.html  PHYSICS_ABSTRACTIONS_PAGE.html  PHYSICS_BASICS_NOTIONS_PAGE.html  PHYSICS_INTRODUCTORY_PAGE.html  PHYSICS_MEASURING_DELAY_PAGE.html  PHYSICS_MEASURING_FILTERING_PAGE.html  (+112 more)
docs/search/: all_1.js  all_11.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  enums_2.js  functions_0.js  functions_4.js  functions_6.js  functions_7.js  functions_a.js  functions_b.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_6.js  groups_7.js  groups_9.js  groups_a.js  groups_b.js  pages_3.js  pages_4.js  pages_5.js  pages_8.js  pages_9.js  pages_a.js  pages_c.js  pages_e.js  variables_0.js  variables_3.js  variables_5.js  variables_8.js
gtest/: CMakeLists.txt
gtest/ScQtAND/: CMakeLists.txt  ScQtAND_gtest.cpp  TestAbstractPUBase.cpp  TestNeuronPhysical.cpp
gtest/ScQtAND/include/: NeuronPhysicalTest.h  TestNeuronPhysical.h
html/: GencompMachineStates_8h_source.html  MEASURING_ELECTROLITES_PAGE.html  MODELING_COMPUTING_MAIN_PAGE.html  MODELING_ELECTROLYTES_PAGE.html  MODELING_MAIN_PAGE.html  MODELING_MULTIPLE_MAIN_PAGE.html  MODELING_SINGLE_ABSTRACT_MEMBRANE_PAGE.html  MODELING_SINGLE_ELECTRIC_PAGE.html  MODELING_SINGLE_MAIN_PAGE.html  NeuronDemo_8h.html  NeuronDemo_8h__incl.md5  NeuronDemo_8h_source.html  NeuronPhysical_8h.html  NeuronPhysical_8h__incl.map  NeuronPhysical_8h_source.html  PHYSICS_BASICS_NOTIONS_PAGE.html  PHYSICS_MEASURING_DELAY_PAGE.html  PHYSICS_SPEED_DEPENDENCE_PAGE.html  PHYSICS_SPEED_PAGE.html  SIMULATION_MAIN_PAGE.html  TAC-doc.tgz  TACdoxy_layout.xml  classEVENT__GenComp__type.html  classNeuronDemo.html  classNeuronDemo.js  classNeuronPhysical.html  classscGenComp__PU__Abstract.js  classscGenComp__PU__Bio.html  classscGenComp__PU__Bio__inherit__graph.map  classscGenComp__PU__Tech.js  group__COMPUTING__BASICS.html  group__MEASURING__CONDUCTANCE.html  group__MEASURING__ELECTROLYTES.html  group__MODELING__MULTIPLE.html  group__MODELING__SINGLE__AP.html  group__MODELING__SINGLE__AXON.html  group__PHYSICS.html  group__PHYSICS.js  group__PHYSICS__MEASURING__DELAY.html  group__PHYSICS__SPEEDS.html  (+5 more)
html/search/: all_1.js  all_2.js  all_4.js  all_8.js  all_b.js  all_e.js  enumvalues_0.js  functions_4.js  functions_9.js  functions_a.js  functions_b.js  groups_1.js  groups_6.js  pages_2.js  pages_4.js  pages_5.js  pages_a.js  variables_1.js  variables_3.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
neuron/: CMakeLists.txt  Utils.cpp  Utils.h
neuron/neurons/: EventGencomp.h  NeuronConceptual.h  NeuronDemo.h  NeuronPhysical.cpp  NeuronPhysical.h  scGenComp_Config.h  scGenComp_PU_Abstract.cpp  scGenComp_PU_Abstract.h  scGenComp_PU_Bio.cpp  scGenComp_PU_Bio.h  scGenComp_PU_Tech.cpp  scGenComp_PU_Tech.h
www/manual/: LaTeXML.cache  bib.html  ch_Computing.html  ch_Information.html  ch_Physics.html  ch_Single.html  idx.html  index.html  sec_Physiology-Current-Without.html
www/manual/Ch2.S4.SS2/: LaTeXML.cache  SSSx1.html  SSSx2.html  index.html
www/manual/Ch2.S4.SS3/: LaTeXML.cache  index.html
www/manual/Physiology/: LaTeXML.cache  S1.html  S2.html  idx.html  index.html
www/manual/ch_Computing/: LaTeXML.cache  index.html
www/manual/ch_Information/: LaTeXML.cache  idx.html  index.html
www/manual/ch_Physics/: LaTeXML.cache  index.html  sec_Physics-Abstraction.html  sec_Physics-Speeds.html  sec_PhysicsIntroduction.html
www/manual/ch_Physiology/: LaTeXML.cache  S2.html  idx.html  index.html  sec_Physiology-Membrane.html
www/manual/ch_Single/: LaTeXML.cache  MODELING_SINGLE_ABSTRACT_NEURON.html  index.html
www/manual/ch_overview/: LaTeXML.cache  Sx1.html  index.html
(+294 files in other folders)
